--- a/app/src/main/res/layout/phone_item.xml
+++ b/app/src/main/res/layout/phone_item.xml
@@ -52,7 +52,7 @@
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/whatsup"
+            android:id="@+id/whatsapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
